<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".OTPVerification.OTPMainFragment">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/verification_code"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/verify_account_description"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/otpText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/submit_otp_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/verification_btn_background"
        android:paddingHorizontal="30dp"
        android:text="@string/verify_account_btn_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didn_t_receive_the_otp" />

    <Button
        android:id="@+id/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/resend_code"
        android:textColor="#ef5350" />
</LinearLayout>
